--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<link rel="style.css" rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+<link rel="apple-touch-icon" href="img/icon60.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/icon76.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/icon120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/icon152.png">
+
+<link href="style.css" rel="stylesheet" type="text/css" />
 <script src="bower_components/jquery/jquery.min.js"></script>
 <script src="bower_components/d3/d3.min.js"></script>
 <script src="bower_components/heatcanvas/heatcanvas.js"></script>
@@ -11,6 +17,8 @@
 <title>City Expenditures</title>
 </head>
 <body>
+<div id="title">ExpeditureHeater <small>Heating up Spending</small></div>
 <div id="map"></div>
+<div id="attribution">Data Source: <a href="https://controllerdata.lacity.org/Finance/Neighborhood-Council-Expenditures/f2ec-m4t9#column-menu" target="blank">Control Panel L.A.</a></div>
 </body>
 </html>
