apple toolbar removed for bookmarked folks

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+<meta name="apple-mobile-web-app-capable" content="yes">
 <link rel="apple-touch-icon" href="img/icon60.png">
 <link rel="apple-touch-icon" sizes="76x76" href="img/icon76.png">
 <link rel="apple-touch-icon" sizes="120x120" href="img/icon120.png">
@@ -14,11 +15,11 @@
 <script src="bower_components/heatcanvas/heatcanvas-googlemaps.js"></script>
 
 <script src="main.js"></script>
-<title>City Expenditures</title>
+<title>ExpenditureHeater</title>
 </head>
 <body>
 <div id="title">ExpeditureHeater <small>Heating up Spending</small></div>
 <div id="map"></div>
-<div id="attribution">Data Source: <a href="https://controllerdata.lacity.org/Finance/Neighborhood-Council-Expenditures/f2ec-m4t9#column-menu" target="blank">Control Panel L.A.</a></div>
+<div id="attribution">Data Source: <a href="https://controllerdata.lacity.org/Finance/Neighborhood-Council-Expenditures/f2ec-m4t9#column-menu" target="blank">Control Panel L.A., <a href="http://hackforladec2013.challengepost.com/" target="_blank">Hack for LA</a></div>
 </body>
 </html>
